[tool.poetry]
name = "safecrew-t4-2-cs2-supply-points"
version = "0.1.0"
description = ""
authors = ["Massimiliano Arca <massimiliano.arca@mail.polimi.it>"]
readme = "README.md"
packages = [{include = "safecrew_t4"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
plotly = "^6.0.1"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
pyarrow = "^19.0.1"
statsmodels = "^0.14.4"
nbformat = "^5.10.4"
miceforest = "^6.0.3"
umap-learn = "^0.5.7"
datashader = "^0.18.0"
bokeh = "^3.7.2"
holoviews = "^1.20.2"
scikit-image = "^0.25.2"
colorcet = "^3.1.0"
# copkmeans = {git = "https://github.com/Behrouz-Babaki/COP-Kmeans"}
certifi = "^2025.1.31"
copkmeans = {git = "https://github.com/Behrouz-Babaki/COP-Kmeans"}
black = {extras = ["jupyter"], version = "^25.1.0"}
isort = "^6.0.1"
optuna = "^4.3.0"
torch = "^2.7.0"
quantnn = "^0.0.5"
xgboost = "^3.0.0"
ipywidgets = "^8.1.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
